--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" lang="en">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Insure</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./styles/output.css" type="text/css" rel="stylesheet">
@@ -41,8 +41,8 @@ html, body {
         <span class="border border-grayishViolet-200 order-5 w-40 absolute inset-x-0 mt-70 ml-8 sm:ml-32"></span>
         <div class="order-2 sm:top-1 sm:mr-8 sm:p-5 sm:w-2/5 sm:m-0 sm:flex sm:flex-col ">
         <h1 class="text-4xl px-6 font-heading pt-3 sm:order-1 sm:text-6xl">Humanizing your insurance.</h1>
-        <img src="./images/bg-pattern-intro-left-mobile.svg" aria-label="background" class="sm:hidden w-40 absolute inset-y-0 mt-70" id="bgLeft">
-        <img src="./images/bg-pattern-intro-right-mobile.svg" aria-label="background" class="sm:hidden w-24 absolute right-0 mt-32">
+        <img src="./images/bg-pattern-intro-left-mobile.svg" aria-label="background" alt="background pattern left mobile" class="sm:hidden w-40 absolute inset-y-0 mt-70" id="bgLeft">
+        <img src="./images/bg-pattern-intro-right-mobile.svg" aria-label="background" alt="background pattern right mobile" class="sm:hidden w-24 absolute right-0 mt-32">
         <p class="order-3 p-4 sm:leading-normal">Get your life insurance coverage easier and faster. 
             We blend our expertise and technology to help you find 
             the plan that's right for you. Ensure you and your loved ones are protected.</p>
@@ -83,8 +83,8 @@ html, body {
         </div>
     </section>
     <section class="text-lightGray-100 text-center flex flex-col justify-center items-center bg-darkViolet-100 py-10 m-auto w-11/12 sm:flex-row sm:justify-between">
-        <img src="./images/bg-pattern-how-we-work-mobile.svg" aria-label="background" class="overflow-hidden w-40 h-64 absolute right-0 mt-0 mr-4 sm:hidden">
-        <img src="./images/bg-pattern-how-we-work-desktop.svg" aria-label="background" class="overflow-hidden hidden z-0 sm:flex sm:absolute sm:right-0 sm:w-70 sm:h-52 sm:mr-16">
+        <img src="./images/bg-pattern-how-we-work-mobile.svg" aria-label="background"  alt="background pattern working mobile" class="overflow-hidden w-40 h-64 absolute right-0 mt-0 mr-4 sm:hidden">
+        <img src="./images/bg-pattern-how-we-work-desktop.svg" aria-label="background" alt="background pattern working desktop" class="overflow-hidden hidden z-0 sm:flex sm:absolute sm:right-0 sm:w-70 sm:h-52 sm:mr-16">
         <h1 class="font-heading text-4xl leading-none sm:text-5xl sm:w-1/2 sm:pr-32 sm:text-left sm:leading-snug sm:ml-16">Find out more about how we work</h1>
         <button class="border border-lightGray-100 mt-4 w-40 h-12 sm:mr-32 sm:z-50 hover:bg-white hover:text-darkViolet-100">
             <a href="" aria-label="How We Work">HOW WE WORK</a>
