--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
 
 <head>
-    <meta charset="utf-8" lang="en">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Insure</title>
     <meta name="description" content="">
